# lambda_function_url_terraform

./: .gitignore  .pre-commit-config.yaml  README.md  main.tf  pyproject.toml  setup.cfg
lambda_function_url_terraform/: main.py
tests/: test_main.py
