[tool.poetry]
name = "lambda_function_url_terraform"
version = "0.1.0"
description = ""
authors = ["ShaneNolan <shanenullain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8-pytest-style = "^1.6.0"
safety = "^1.10.3"
wemake-python-styleguide = "^0.16.1"
pre-commit = "^2.18.1"
nitpick = "^0.32.0"
autopep8 = "^1.6.0"
httpie = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
